# CppDemoProject

./: .gitignore  CMakeLists.txt  config.ini
Config/: config.ini
Include/Network/: AutoUpdater.h
Source/: main.cpp
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Source/Network/: AutoUpdater.cpp
Tests/: test_libs.cpp  test_libs.h
